[tool.poetry]
name = "yieldanalysis"
version = "0.1.0"
description = ""
authors = ["Ben"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.12"
numpy = "^1.26.2"
pandas = "^2.1.4"
requests = "^2.31.0"
matplotlib = "^3.8.2"
statsmodels = "^0.14.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "main_range_analysis:main"
